--- a/modules/sub-plugin/docker-cli/src/main/resources/config_default/docker/runs/ubuntu-git/Dockerfile
+++ b/modules/sub-plugin/docker-cli/src/main/resources/config_default/docker/runs/ubuntu-git/Dockerfile
@@ -11,7 +11,7 @@
 FROM ubuntu:latest
 ENV DEBIAN_FRONTEND=noninteractive
 ENV LANG C.UTF-8
-RUN RUN sed -i s/archive.ubuntu.com/mirrors.aliyun.com/g /etc/apt/sources.list \
+RUN sed -i s/archive.ubuntu.com/mirrors.aliyun.com/g /etc/apt/sources.list \
     && sed -i s/security.ubuntu.com/mirrors.aliyun.com/g /etc/apt/sources.list \
     && apt-get update \
     && apt-get install -y curl wget git
